Fix link case sensitivity for About page

--- a/Advanced_techniques.html
+++ b/Advanced_techniques.html
@@ -34,7 +34,7 @@
             <a href="chords.html">Essential Chords</a> |
             <a href="tabs.html">Tabs</a> |
             <a class="selected_page" href="Advanced_techniques.html">Advanced Techniques</a> |
-            <a href="about.html">About</a>
+            <a href="About.html">About</a>
         </nav>
     </footer>
 </body>
